# SYNAPSE

./: .env.example  .gitignore  IMPROVEMENT_PLAN.md  LICENSE  PROJECT_PLAN.md  README.md  docker-compose.yml  project_blueprint.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  filter_rules.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_jobs.py  0002_alignment_score.py  0003_dossiers.py  0004_dossier_evidence.py  0005_phase11.py  0006_artifacts.py
backend/app/: api.py  artifacts.py  config.py  db.py  dossiers.py  embedding.py  enrich.py  filtering.py  freshness.py  ingest.py  main.py  matching.py  metrics.py  notify.py  repository.py  scheduler.py  settings_api.py  tracing.py  vector.py
backend/app/adapters/: __init__.py  adzuna.py  base.py  greenhouse.py  jooble.py  lever.py  rss.py  usajobs.py
backend/app/agents/: crew.py  interview.py  llm.py  render.py  research.py  schemas.py  tailor.py
backend/app/models/: __init__.py  job.py  orm.py
backend/eval/: golden.yaml
backend/profile/: candidate_profile.md  master_resume.md
backend/tests/: conftest.py  test_adapters.py  test_dossiers.py  test_enrich.py  test_filtering.py  test_freshness.py  test_health.py  test_ingest.py  test_job_model.py  test_matching.py  test_phase11.py  test_phase12.py  test_phase13.py  test_render.py  test_repository.py  test_research.py  test_vector.py
frontend/: Dockerfile  jest.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: JobCard.tsx
frontend/src/components/__tests__/: JobCard.test.tsx
frontend/src/lib/: api.ts  markdown.tsx
frontend/src/lib/__tests__/: markdown.test.tsx
observability/grafana/dashboards/: synapse.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
scripts/: benchmark_embeddings.py  benchmark_ollama.py  bootstrap.ps1  bootstrap.sh  calibrate_threshold.py  db_cleanup.py  e2e_smoke.py  eval_dossiers.py
(+1 files in other folders)
