[project]
name = "synapse-backend"
version = "1.0.0"
description = "Project SYNAPSE — job sourcing, matching, and deep-research backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "markdownify>=0.12",
    "pyyaml>=6.0",
    "crewai>=0.100",
    "ddgs>=6.0",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation-crewai>=0.1",
    "openinference-instrumentation-litellm>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
